Fix issue with overflow property on wave animation

--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer {
   }
 
   .wave {
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
   .wave::before {
